2015-02-20  Bernd Schmidt  <bernds@codesourcery.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* tree-streamer.c (preload_common_nodes): Don't preload
	TI_VA_LIST* for offloading.
	* tree-stdarg.c (pass_stdarg::gate): Disable for ACCEL_COMPILER
	in_lto_p.

2015-02-19  John David Anglin  <danlgin@gcc.gnu.org>

	* config/pa/pa.c (pa_emit_move_sequence): Always force
	(const (plus (symbol) (const_int))) to const mem.  Put REG_EQUAL
	note on insn.

	* config/pa/pa.c (pa_reloc_rw_mask): New function.
	(TARGET_ASM_RELOC_RW_MASK): Define.
	(pa_cannot_force_const_mem): Revert previous change.

2015-02-19  Martin Jambor  <mjmabor@suse.cz>
	    Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65028
	* ipa-cp.c (propagate_alignment_accross_jump_function): Fix propagation
	across jump functions.

2015-02-19  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_in_small_data_p): Reject common symbols.

2015-02-19  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi (x86 transactional memory intrinsics): Copy-edit.

2015-02-19  Richard Henderson  <rth@redhat.com>

	PR middle-end/65074
	* varasm.c (default_binds_local_p_2): Don't test node->definition;
	test DECL_EXTERNAL independent of symtab_node.

2015-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR lto/65012
	* varpool.c (varpool_node::get_constructor): Return early
	if this->lto_file_data is NULL.

2015-02-19  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

	* haifa-sched.c (enum rfs_decision, rfs_str): Remove RFS_DEBUG.
	(rank_for_schedule_debug): Update.
	(ready_sort): Make static.  Move sorting logic to ...
	(ready_sort_debug, ready_sort_real): New static functions.
	(schedule_block): Sort both debug insns and real insns in preparation
	for ready list trimming.  Improve debug output.
	* sched-int.h (ready_sort): Remove global declaration.

2015-02-18  Trevor Saunders  <tsaunders@mozilla.com>

	* ipa-icf.c (sem_function::equals_private): Adjust.
	(sem_function::bb_dict_test): Take a vec<int> * instead of