@@ -1,3 +1,8 @@
+2015-02-20  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/64452
+	* gcc.target/avr/torture/pr64452.c: New test.
+
 2015-02-19  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	* gcc.dg/tree-ssa/20040204-1.c: Don't XFAIL on sh*-*-*.
